[gd_scene load_steps=6 format=3 uid="uid://ctdhrfnn0sfax"]

[ext_resource type="Theme" uid="uid://colntvk4byf73" path="res://assets/themes/transluscent_panel_theme.tres" id="1_n150s"]
[ext_resource type="Script" path="res://views/loadout_menu/info_viewer/info_viewer.gd" id="2_jh0by"]
[ext_resource type="LabelSettings" uid="uid://c0sgp66c8rapj" path="res://assets/themes/card_binder_menu.tres" id="3_0rcru"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6smgh"]

[sub_resource type="Theme" id="Theme_04o7a"]
Panel/styles/panel = SubResource("StyleBoxEmpty_6smgh")

[node name="InfoViewer" type="Panel"]
custom_minimum_size = Vector2(360, 400)
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_n150s")
script = ExtResource("2_jh0by")

[node name="Layout" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header_Container" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="SpritePanel" type="Panel" parent="Layout/Header_Container"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
theme = SubResource("Theme_04o7a")

[node name="AnimationTimer" type="Timer" parent="Layout/Header_Container/SpritePanel"]

[node name="Card_Info_Container" type="VBoxContainer" parent="Layout/Header_Container"]
layout_mode = 2

[node name="Name_HBox" type="HBoxContainer" parent="Layout/Header_Container/Card_Info_Container"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Layout/Header_Container/Card_Info_Container/Name_HBox"]
layout_mode = 2
text = "Name:"
label_settings = ExtResource("3_0rcru")

[node name="NameText" type="Label" parent="Layout/Header_Container/Card_Info_Container/Name_HBox"]
layout_mode = 2
text = "example"
label_settings = ExtResource("3_0rcru")

[node name="Pack_HBox" type="HBoxContainer" parent="Layout/Header_Container/Card_Info_Container"]
layout_mode = 2

[node name="PackLabel" type="Label" parent="Layout/Header_Container/Card_Info_Container/Pack_HBox"]
layout_mode = 2
text = "Pack:
"
label_settings = ExtResource("3_0rcru")

[node name="PackText" type="Label" parent="Layout/Header_Container/Card_Info_Container/Pack_HBox"]
layout_mode = 2
text = "example pack"
label_settings = ExtResource("3_0rcru")

[node name="Rarity_HBox" type="HBoxContainer" parent="Layout/Header_Container/Card_Info_Container"]
layout_mode = 2

[node name="RarityLabel" type="Label" parent="Layout/Header_Container/Card_Info_Container/Rarity_HBox"]
layout_mode = 2
text = "Rarity:"
label_settings = ExtResource("3_0rcru")

[node name="RarityText" type="Label" parent="Layout/Header_Container/Card_Info_Container/Rarity_HBox"]
layout_mode = 2
text = "common"
label_settings = ExtResource("3_0rcru")

[node name="Value_HBox" type="HBoxContainer" parent="Layout/Header_Container/Card_Info_Container"]
layout_mode = 2

[node name="ValueLabel" type="Label" parent="Layout/Header_Container/Card_Info_Container/Value_HBox"]
layout_mode = 2
text = "Value:"
label_settings = ExtResource("3_0rcru")

[node name="ValueText" type="Label" parent="Layout/Header_Container/Card_Info_Container/Value_HBox"]
layout_mode = 2
text = "$1000000000"
label_settings = ExtResource("3_0rcru")

[node name="Card_Description" type="Label" parent="Layout"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 3
text = "This is an example of a card's description.
Hopefully it is enough text to get the point across. Blah blah blah blah blah blah blah blah blah blah."
label_settings = ExtResource("3_0rcru")
autowrap_mode = 3

[connection signal="timeout" from="Layout/Header_Container/SpritePanel/AnimationTimer" to="." method="_on_animation_timer_timeout"]
